[project]
name = "graph_rag_data_pipeline_1"
requires-python = ">=3.13"
version = "0.1.0"
dependencies = [
    "dagster==1.12.8",  # Data pipeline orchestrator
    "polars",  # Data manipulator
    "pydantic",  # Data validation
    "pydantic-settings",  # Configuration validation
    "structlog",  # Structured logging
    "msgspec",  # Async/Sync HTTP client
    "tqdm",  # Progress bars
    "ftfy", # Text cleaning
    "langchain-text-splitters",  # Text splitter used in embeddings
    "chromadb>=0.6.0",  #  Chroma, vector database
    "torch",  # PyTorch, deep learning library
    "transformers",  # HuggingFace transformers library
    "einops",  # For tensor operations
    "nomic",  # Embedding model (Nomic AI)
    "neo4j",  # Neo4j graph database driver
    "dagster_gcp",  # Dagster integration with GCP  # MusicBrainz API client
    # "musicbrainzngs",  #
    "curl-cffi>=0.14.0",  #
    "sentence_transformers"  #
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "pytest",  # For unit tests
    "pytest-asyncio", # For async tests
    "pytest-mock", # For mocking in tests
    "bandit",  # Security scanning
    "ruff", # Linter and Formatter
    "ty",  # Type checker
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_pipeline"]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "data_pipeline"
registry_modules = [
    "graph_rag_data_pipeline_1.components.*",
]

[tool.ruff]
line-length = 88
target-version = "py313"
